--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <div class="container">
           <div class="log-in__container">
             <form id="form" class="form" autocomplete="off">
-              <h2>Regjistrohu</h2>
+              <h2>Kyqu</h2>
               <div class="form-control">
                 <label for="username">Emri i përdoruesit</label>
                 <input
@@ -33,8 +33,8 @@
                 <small>Error message</small>
               </div>
               <div class="buttons">
-                <a href="./home.html" class="cancel-button">Kthehu Mbrapa</a>
-                <button type="submit">Regjistrohu</button>
+                <a href="signUp.html" class="cancel-button">Regjistrohu</a>
+                <button type="submit">Hyr</button>
               </div>
             </form>
           </div>
