--- a/signUp.html
+++ b/signUp.html
@@ -50,7 +50,7 @@
                 <small>Error message</small>
               </div>
               <div class="buttons">
-                <a href="./home.html" class="cancel-button">Kthehu Mbrapa</a>
+                <a href="index.html" class="cancel-button">Kthehu Mbrapa</a>
                 <button type="submit">Regjistrohu</button>
               </div>
             </form>
