--- a/Kontakti.html
+++ b/Kontakti.html
@@ -107,7 +107,7 @@
                   <li><a href="aboutus.html" class="footerLi">Rreth Nesh</a></li>
                   <li><a href="" class="footerLi">Udhetime me Airoplan</a></li>
                   <li><a href="" class="footerLi">Udhetime me Autobus</a></li>
-                  <li><a href="" class="footerLi">Pushime</a></li>
+                  <li><a href="blog.html" class="footerLi">Blog</a></li>
                   <li><a href="Kontakti.html" class="footerLi">Kontakti</a></li>
                 </ul>
               </div>
