--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
     <ul class="navbar">
         <a href=""><img src="images\logo.png" alt="" id="logo"></a>
         <li class="nav"><a class="active link" href="index.html" >Home</a></li>
-        <li class="nav"><a href="blog.html" class="link">Blog</a></li>
+        <li class="nav"><a href="#" class="link">Blog</a></li>
         <li class="nav"><a href="#" class="link">Udhetime me Autobus</a></li>
         <li class="nav"><a href="#" class="link">Udhetime me Airoplan</a></li>
         <li class="nav"><a href="aboutus.html" class="link">Rreth Nesh</a></li>
