--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="navbar">
             <a href=""><img src="images\logo.png" alt="" id="logo"></a>
             <li class="nav"><a class="active link" href="index.html" >Home</a></li>
-            <li class="nav"><a href="#" class="link">Pushime</a></li>
+            <li class="nav"><a href="blog.html" class="link">Blog</a></li>
             <li class="nav"><a href="#" class="link">Udhetime me Autobus</a></li>
             <li class="nav"><a href="#" class="link">Udhetime me Airoplan</a></li>
             <li class="nav"><a href="aboutus.html" class="link">Rreth Nesh</a></li>
@@ -163,7 +163,7 @@
                 <li><a href="aboutus.html" class="footerLi">Rreth Nesh</a></li>
                 <li><a href="" class="footerLi">Udhetime me Airoplan</a></li>
                 <li><a href="" class="footerLi">Udhetime me Autobus</a></li>
-                <li><a href="" class="footerLi">Pushime</a></li>
+                <li><a href="blog.html" class="footerLi">Blog</a></li>
                 <li><a href="Kontakti.html" class="footerLi">Kontakti</a></li>
               </ul>
             </div>
